fix rescue thread fail on throwable in step (todo: fix assert in bpmn shutdown)